--- a/css/weather.css
+++ b/css/weather.css
@@ -14,3 +14,13 @@
 hr {
     background: #18143b;
 }
+
+#map {
+    height: 250px;
+}
+
+@media screen and (min-width: 768px) {
+    #map {
+        height: 500px;
+    }
+}
